Fix the permanent scrollbar when a text component is in edit mode

--- a/modules/app/src/main/resources/assets/page-editor/styles/partials/page-view.less
+++ b/modules/app/src/main/resources/assets/page-editor/styles/partials/page-view.less
@@ -65,17 +65,18 @@
     }
   }
 
+  &.text-edit-mode {
+    .cke-toolbar-container > .cke_chrome {
+      border: none;
+    }
+  }
+
   &::before {
     display: none;
   }
 
   .@{_CLS_PREFIX}page-descriptor-dropdown {
     margin-top: 53px;
-  }
-
-  .mce-widget.mce-tooltip.mce-tooltip-n {
-    position: fixed;
-    z-index: @z-index-context-menu + 1 !important;
   }
 
   .fnr-panel {
